API Integration in user details page - changes added

--- a/src/lib/translations/languages/de.json
+++ b/src/lib/translations/languages/de.json
@@ -374,6 +374,7 @@
     "create_ad": "Create Ad",
     "subscriber": "Subscriber",
     "subscribed": "Subscribed",
+    "request_pending": "Request Pending",
     "posts": "Posts",
     "subscribe": "Subscribe",
     "message": "Message",
