--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -382,6 +382,7 @@
     "create_ad": "Create Ad",
     "subscriber": "Subscribers",
     "subscribed": "Subscribed",
+    "request_pending": "Request Pending",
     "posts": "Posts",
     "subscribe": "Subscribe",
     "message": "Message",
