implementation of voucher module

--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -734,11 +734,11 @@
     "AdminStatus": "Admin Status",
     "Verification": "Add verification",
     "Remove_Verification": "Remove Verification",
-    "Period": "Period",
-    "amount": "amount",
-    "type": "type",
-    "Number": "Number",
-    "Code": "Code",
+    "period": "Period",
+    "amount": "Amount",
+    "type": "Type",
+    "number": "Number",
+    "code": "Code",
     "status": "status",
     "Add_voucher_code": "Add voucher code",
     "Data_download": "Data download",
