add messages list

--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -2,7 +2,8 @@
   "app_name": "Picstagraph",
 
   "date_format": {
-    "date": "MM/DD/YYYY"
+    "date": "MM/DD/YYYY",
+    "time": "LT"
   },
 
   "offen": "In der Picstagraph-App offenen",
