Language change added

--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -275,6 +275,10 @@
       "name": "Language",
       "type": "radio"
     },
+    "language_select": {
+      "name": "Language",
+      "type": "select-language"
+    },
     "relevance": {
       "name": "Relevance",
       "type": "radio"
