implementation of the Image Reported Conetent Module

--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -258,7 +258,7 @@
     "all": "All",
     "outstanding": "Outstanding",
     "processed": "Processed",
-    "not_processed": "Not processed"
+    "not_processed": "Not Processed"
   },
 
   "service_menu": {
