--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -146,6 +146,7 @@
   "messages_modal": {
     "unknown": "Unknown",
     "messages": "Messages",
+    "ready": "You are ready to chat ..",
     "Companies": "Companies"
   },
   "modal_header": {
