--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -195,7 +195,9 @@
   "tool_tips": {
     "report": "Report Post",
     "save": "Save Post",
-    "lock": "locks / unlocks content"
+    "lock": "Lock content",
+    "unlock": "Unlock content",
+    "do_not": "Do not lock content"
   },
 
   "back_office_menu": {
