--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -142,8 +142,8 @@
     "status": "Status",
     "statistics": "Statistics",
     "serverError": "Something went wrong. Please Try Again",
-    "voucherCodeRequired": "Please enter Voucher Code",
-    "voucherCodeValid": "Please enter Valid Voucher Code",
+    "voucherCodeRequired": "If you have voucher code, then Please Enter Voucher Code (Otherwise, Ignore)",
+    "voucherCodeValid": "Please Enter Valid Voucher Code (Otherwise, Ignore)",
     "CompletePaymentTransaction": "Complete payment transaction",
     "BillingAddress": "Billing Address",
     "PaymentMethod": "Payment method",
