--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -21,6 +21,7 @@
   "upload_title_image": "Upload title image",
 
   "view_more_comments": "View more comments",
+  "view_less_comments": "View less comments",
 
   "apply_campaign": "Apply for this campaign",
 
