implementation of the unreport and unsaved post

--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -216,7 +216,11 @@
 
   "tool_tips": {
     "report": "Report Post",
+    "unreport": "Unreport Post",
+    "report_comment": "Report Comment",
+    "unreport_comment": "Unreport Comment",
     "save": "Save Post",
+    "unsave": "Unsave Post",
     "lock": "Lock content",
     "unlock": "Unlock content",
     "do_not": "Do not lock content",
