Report and Unreport user API Integration - changes added

--- a/src/lib/translations/languages/de.json
+++ b/src/lib/translations/languages/de.json
@@ -225,7 +225,8 @@
     "delete": "Delete",
     "block": "Block",
     "unblock": "Unblock",
-    "report_user": "Report User"
+    "report_user": "Report User",
+    "unreport_user": "Unreport User"
   },
 
   "back_office_menu": {
