add back button for back-office reported and review module

--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -560,7 +560,8 @@
 
   "filter": {
     "reset_filter": "Reset filters",
-    "apply": "Apply"
+    "apply": "Apply",
+    "back": "Back"
   },
 
   "languages": {
