Community page changes

--- a/src/lib/translations/languages/de.json
+++ b/src/lib/translations/languages/de.json
@@ -444,7 +444,8 @@
     "community": "Community",
     "serverError": "Something went wrong. Please Try Again",
     "Subscribe": "Subscribe",
-    "Subscribed": "Subscribed"
+    "Subscribed": "Subscribed",
+    "Pending": "Pending"
   },
 
   "left_sidebar": {
