implemented participant module

--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -730,6 +730,7 @@
   },
   "landing": {
     "Navigation": "Navigation",
+    "published_a_campaign": "Published a Campaign",
     "Review": "Review",
     "Key_statistics": "Key statistics",
     "Content_statistics": "Content statistics",
