Ad statics changes added

--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -444,7 +444,7 @@
     "serverError": "Something went wrong. Please Try Again",
     "Subscribe": "Subscribe",
     "Subscribed": "Subscribed",
-    "Pending": "Pending"
+    "Pending": "Request Pending"
   },
 
   "left_sidebar": {
