--- a/src/lib/translations/languages/de.json
+++ b/src/lib/translations/languages/de.json
@@ -445,7 +445,7 @@
     "serverError": "Something went wrong. Please Try Again",
     "Subscribe": "Subscribe",
     "Subscribed": "Subscribed",
-    "Pending": "Pending"
+    "Pending": "Request Pending"
   },
 
   "left_sidebar": {
