Redux integration of Remove Participant

--- a/src/lib/translations/languages/de.json
+++ b/src/lib/translations/languages/de.json
@@ -259,7 +259,8 @@
     "block": "Block",
     "unblock": "Unblock",
     "report_user": "Report User",
-    "unreport_user": "Unreport User"
+    "unreport_user": "Unreport User",
+    "remove_participant": "Remove Participant"
   },
 
   "back_office_menu": {
