Select age - changes added

--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -403,7 +403,7 @@
     },
     "age": {
       "name": "Age",
-      "type": "select"
+      "type": "age-select"
     },
     "hashtag": {
       "name": "Hashtag",
@@ -888,6 +888,7 @@
   "select_offer": "Select Offer",
   "select_radius": "Select Radius",
   "select_target_group": "Select Target Group",
+  "select_age": "Select Age",
 
   "error": {
     "create_modal": {
