New design change in create campaign - changes added

--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -125,30 +125,31 @@
     "clicks": "Clicks",
     "views": "Views",
     "title_of_campaigns": "Title of campaigns",
-    "title": "Title",
+    "title": "Start your campaign",
     "add_title": "Add title",
+    "add_title_image": "Add title image",
     "inquiry_tag": "Inquiry tag",
     "select_inquiry": "Select Inquiry",
-    "inquiry": "Inquiry",
+    "inquiry": "Add inquiry",
     "offer_tag": "Offer tag",
     "select_offer": "Select offer",
-    "offer": "Offer",
+    "offer": "Add offer",
     "details_of_campaigns": "Details of campaigns",
     "male": "Male",
     "female": "Female",
     "male_female": "Female & Male",
     "company": "Company",
-    "target_group": "Target group",
+    "target_group": "Add target group",
     "image": "Image",
     "video": "Video",
-    "type": "Type",
+    "type": "Add type of application",
     "anonymous": "Anonymous",
     "public": "Public",
-    "procedure": "Procedure",
+    "procedure": "Add procedure",
     "application_criteria": "Application criteria",
     "select_category": "Select category",
-    "add_category": "Add Category",
-    "add_location": "Add Location",
+    "add_category": "Add category",
+    "add_location": "Add location",
     "define_runtime_budget": "Define runtime & budget",
     "start": "Start",
     "end": "End",
@@ -178,7 +179,6 @@
     "Runtime": "Runtime",
     "MaximumExpenses": "Maximum expenses",
     "CommitToBuy": "Commit to buy",
-    "CommitToUpdate": "Commit to Update",
     "onClickRegister": "By clicking on register you agree to our",
     "GenralTerms": "General Terms & Conditions",
     "termsUse": "Terms of Use",
@@ -196,7 +196,9 @@
     "edit_campaign": "Edit Campaign",
     "close_campaign": "Close Campaign",
     "budget_runtime": "Budget & Runtime",
-    "total_budget_spent": "Total budget spent"
+    "total_budget_spent": "Total budget spent",
+    "public_procedure_help_text": "If you choose public, every user will be able to see the content from your participants.",
+    "anonymous_proceture_help_text": "If you choose anonymous, only you will see the content from your participants."
   },
 
   "messages_modal": {
