New design for create ads changes added

--- a/src/lib/translations/languages/de.json
+++ b/src/lib/translations/languages/de.json
@@ -69,13 +69,14 @@
     "runtime": "Runtime",
     "runtime_passed": "Runtime passed",
     "remaining_runtime": "Remaining runtime",
-    "title_of_ads": "Title of Ads",
+    "title_of_ads": "Start your advertisement",
+    "add_title_image": "Add title image",
     "add_title": "Add title",
-    "add_location": "Add Location",
-    "add_radius": "Add Radius",
-    "add_category": "Add Category",
-    "add_description": "Add Description",
-    "add_target_group": "Add Target group",
+    "add_location": "Add location",
+    "add_radius": "Add radius",
+    "add_category": "Add category",
+    "add_description": "Add description",
+    "add_target_group": "Add target group",
     "male_female": "Female & Male",
     "male": "Male",
     "female": "Female",
