normal user and company user changes in register page

--- a/src/lib/translations/languages/de.json
+++ b/src/lib/translations/languages/de.json
@@ -600,6 +600,7 @@
     "register": "Register",
     "agree": "By clicking on register you agree to our",
     "company": "Company",
+    "user": "User",
     "free": "Register free as a",
     "send": "Send"
   },
