Edit profile new changes

--- a/src/lib/translations/languages/de.json
+++ b/src/lib/translations/languages/de.json
@@ -718,7 +718,8 @@
     "email": "Email",
     "inquiry_tag": "Inquiry-tag",
     "location": "Location",
-    "name_company": "Name / Company",
+    "user": "Name",
+    "name_company": "Company",
     "offer_tag": "Offer-tag",
     "phone_number": "Phone number",
     "profile_description": "Profile description",
