--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -40,6 +40,7 @@
   "about": {
     "general_information": "General informations",
     "username": "User name",
+    "user": "Name",
     "name_company": "Name / Company",
     "date_of_birth": "Date of Birth",
     "gender": "Gender",
