integration UI kit into Back-office

--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -309,6 +309,13 @@
       "type": "select"
     }
   },
+  
+  "select": "Select",
+  "showing": "Showing",
+  "to": "to", 
+  "of": "of", 
+  "results": "Results",
+  "table_empty": "Table is Empty",
 
   "reported_content_filter": {
     "relevance": {
