--- a/src/lib/translations/languages/de.json
+++ b/src/lib/translations/languages/de.json
@@ -34,6 +34,7 @@
   "view_less_comments": "View less comments",
 
   "apply_campaign": "Apply for this campaign",
+  "send_message": "Send Message",
 
   "favourite_campaigns": "Favourite Campaigns",
 
