--- a/src/lib/translations/languages/de.json
+++ b/src/lib/translations/languages/de.json
@@ -208,6 +208,17 @@
     "anonymous_proceture_help_text": "If you choose anonymous, only you will see the content from your participants."
   },
 
+  "campaign_details": {
+    "start": "Start",
+    "end": "End",
+    "procedure": "Procedure",
+    "target_group": "Target Group",
+    "type": "Type of Application",
+    "applications": "Applications",
+    "apply_campaign": "Apply for this campaign",
+    "send_message": "Send Message"
+  },
+
   "messages_modal": {
     "unknown": "Unknown",
     "messages": "Messages",
