implemented UI kit into back-office

--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -807,7 +807,7 @@
     "PDF": "PDF"
   },
   "data_download": {
-    "page_title": "Daten- Download",
+    "page_title": "Data - Download",
     "Email": "Email",
     "Password": "Password",
     "Download": "Download",
