--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -218,7 +218,8 @@
     "type": "Type",
     "applications": "Applications",
     "apply_campaign": "Apply for this campaign",
-    "send_message": "Send Message"
+    "send_message": "Send Message",
+    "campaign_success_apply": "You have successfully applied for this campaign"
   },
 
   "messages_modal": {
