Ad stastics changes added

--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -124,7 +124,8 @@
     "location": "Location",
     "radius": "Radius",
     "category": "Category",
-    "target_group": "Target Group"
+    "target_group": "Target Group",
+    "views_clicks": "Views / Clicks"
   },
 
   "create_campaigns": {
